--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,7 @@ nav ul.responsive {
     align-items: center;
 }
 
+
 .container {
     display: flex;
     justify-content: space-between;
@@ -144,6 +145,26 @@ footer {
     padding: 10px 0;
     margin-top: auto;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container,
+main > .card {
+    max-width: 1200px;
+    width: 100%;
+}
+
+main > h1 {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 2.5rem;
+    color: #2d5c88;
+}
+
 
 @media (max-width: 768px) {
     nav ul {
